Fix for Drawer Overflowing Document Body

--- a/css/app.css
+++ b/css/app.css
@@ -223,6 +223,7 @@ body.drawer-open .nav-item button svg {
 	right: 0;
 	bottom: 0;
 	left: 0;
+	height: calc( 100vh - 90px );
 	z-index: 2;
 	overflow-y: auto;
 	padding: 12px;
